把所有寫死的可調數字搬進設定檔
之前有一批數字只存在於程式裡，要改就得重編譯。全部盤點過一遍搬進 config，
現在 /eco reload 就能調完。

config.yml 新增
  general.timezone          每日限制在哪個時區換日（原本寫死 Asia/Taipei）
  general.autosave-minutes  餘額與上架寫入磁碟的間隔（原本寫死 1 分鐘）
  gui.bar-width             進度條格數（原本寫死 10）
  gui.store.*               商店左鍵／右鍵／Shift 各買幾個（原本 1／16／64）
  gui.stock.*               股市左右鍵買賣幾股（原本 1／10）
  report.*                  /eco stats 預設與上限天數、管理面板右鍵天數、
                            富豪榜預設與上限筆數、稽核紀錄筆數
  guard.safety-factor       反向通道的安全倍率（原本寫死 1.5）
  storage.*                 交易紀錄保留筆數、單次查詢上限、讀取逾時、關服等待

config.yml auction 區段新增
  max-amount-per-listing    一筆上架最多幾個（原本寫死 512）
  amount-step / -shift      上架介面數量步進（原本 1／8）
  price-step / -shift       開價步進（原本 10／100）
  reference-listings        參考行情列幾筆（原本寫死 5）

stocks.yml news 區段新增
  max-strength / default-strength / strength-midpoint
                            人工發新聞的強度刻度與換算基準（原本 5／3／3.0）
  strength-jitter-min / -max
                            自動新聞的隨機力道區間。註解本來就寫「隨機 0.6~1.4」，
                            但那兩個數字其實寫死在程式裡，現在名副其實了。

介面上顯示的提示文字也跟著動態化 —— 改了每次買幾個，商店 lore 就會跟著說對，
不會出現設定寫 5 但畫面還寫 64 的情況。

沒有搬進 config 的：按鈕在第幾格。那是版面不是設定，寫錯只會產生一個點不到
的選單而且不會報錯，而沒有人是靠改 slot 座標在調伺服器的。

順帶修掉三處殘留：股票持股、交易紀錄、資產排行還在印「金錠」，
是 GoldStock 時代的遺留，現在都改讀設定的貨幣名稱。

驗證
  實機改設定確認真的生效：default-days 7→3 報告標題變「近 3 天」、
  bar-width 10→20 進度條真的變成 20 格、safety-factor 1.5→3.0 讓守門員
  從 0 個警告變成抓出 4 個並重算建議價。
  機器人客戶端再跑一次 13 個視窗的完整導覽，伺服器端零例外。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01G4LbbYfyUHSUJELcq3iCHY